@@ -1,3 +1,10 @@
+2010-02-18  Mark Harig <idirectscm@aim.com>
+
+	The compiler warns about various stuff. Fix some of it.
+
+	* slime.el (slime-add-local-hook): Remove support for Emacs 20.
+	(sldb-recenter-region): Use forward-line; not next-line.
+
 2010-02-17  Helmut Eller  <heller@common-lisp.net>
 
 	Add a command to eval stuff in the inspector.
